# template-rust

./: .env.sample  Cargo.toml  README.md
