[package]
name = "template-ditto-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-querybuilder"
path = "src/bin/simple_querybuilder.rs"

[[bin]]
name = "simple-dql"
path = "src/bin/simple_dql.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1" }
serde_json = "1"

# Ditto
dittolive-ditto = "=4.7.1-rc.3"
dittolive-ditto-sys = "=4.7.1-rc.3"
dotenv = "0.15.0"
